[+] se hizo la estructura del custom-toast

--- a/src/app/components/custom-input/custom-input.html
+++ b/src/app/components/custom-input/custom-input.html
@@ -1,1 +1,7 @@
-<p>custom-input works!</p>
+<input
+class="border border-black placeholder:text-gray-400 p-2"
+[formControl]="controller"
+[type]="type"
+[autocomplete]="autocomplete"
+[placeholder]="placeholder"
+>
