Estilado de input

--- a/src/app/components/custom-input/custom-input.html
+++ b/src/app/components/custom-input/custom-input.html
@@ -1,5 +1,5 @@
 <input
-class="border border-black placeholder:text-gray-400 p-2"
+class="border-b border-gray-400 placeholder:text-gray-400 p-2 w-72 focus:outline-none focus:ring-0"
 [formControl]="controller"
 [type]="type"
 [autocomplete]="autocomplete"
