--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,9 +1,44 @@
-<p>Login</p>
-<form [formGroup]="loginForm">
-    <div>
-        <app-custom-input [controller]="loginForm.controls.email" type="email" autocomplete="email" placeholder="micorreo@gmail.com"></app-custom-input>
-        <app-custom-input [controller]="loginForm.controls.password" type="password" autocomplete="off" placeholder="contraseña123"></app-custom-input>
-    </div>
 
-    <button class="border border-black p-1" (click)="login()" type="button">Iniciar Sesion</button>
-</form>
+<main class="relative min-h-screen bg-red-100 flex flex-col justify-center items-center">
+    <div class="absolute top-0 left-0 w-full h-[40vh] bg-gradient-to-r from-red-800 to-red-700 clip-curve">
+    </div>
+    <form [formGroup]="loginForm" class="relative z-10 flex justify-center items-center flex-col gap-6 p-7 rounded-2xl bg-white shadow-xl">
+        <div class="text-center">
+            <h1 class="text-2xl font-bold text-red-500">Bienvenido</h1>
+            <p>Inicia sesion para continuar</p>
+        </div>
+        <div class="flex justify-center items-center flex-col gap-2">
+            <app-custom-input [controller]="loginForm.controls.email" type="email" autocomplete="email" placeholder="Email"></app-custom-input>
+                @if (loginForm.controls.email.errors && loginForm.controls.email.touched) {
+                    <div class="text-sm text-red-500">
+                        @if (loginForm.controls.email.errors['required']) {
+                            <p>[!] El correo es requerido</p>
+                        }
+                        @if (loginForm.controls.email.errors['email']) {
+                            <p>[!] Ingresa un correo válido</p>
+                        }
+                    </div>
+                }
+            <app-custom-input [controller]="loginForm.controls.password" type="password" autocomplete="off" placeholder="Contraseña"></app-custom-input>
+                @if (loginForm.controls.password.errors && loginForm.controls.password.touched) {
+                        <div class="text-sm text-red-500">
+                            @if (loginForm.controls.password.errors['required']) {
+                                <p>[!] La contraseña es requerida</p>
+                            }
+                        </div>
+                    }
+        </div>
+        
+        <button class="bg-red-500 text-white rounded-2xl w-80 p-2" (click)="login()" type="button">Iniciar Sesion</button>
+        <a href="" class="text-sm text-gray-500">Olvidaste tu contraseña?</a>
+    </form>
+
+    
+    <div class="relative z-10 text-center text-gray-700 mt-4">
+        <p class="text-sm">¿No tienes cuenta?</p>
+        <button 
+            class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
+                Regístrate aquí
+        </button>
+    </div>
+</main>
