--- a/src/app/components/custom-input/custom-input.html
+++ b/src/app/components/custom-input/custom-input.html
@@ -1,13 +1,19 @@
-<input
-class="border-b border-gray-400 placeholder:text-gray-400 p-2 w-72 focus:outline-none focus:ring-0"
-[formControl]="controller"
-[type]="type"
-[autocomplete]="autocomplete"
-[placeholder]="placeholder"
->
-@if (isPassword) {
-    <button (click)="showOrHidePassword()"> 
-        <span>👀</span>
-    </button>
-}
-
+<div class="relative w-full">
+    <input
+      class="border-b border-gray-400 placeholder:text-gray-400 p-2 w-full pr-10 focus:outline-none focus:ring-0"
+      [formControl]="controller"
+      [type]="type"
+      [autocomplete]="autocomplete"
+      [placeholder]="placeholder"
+    />
+    @if (isPassword) {
+      <button
+        type="button"
+        (click)="showOrHidePassword()"
+        class="absolute inset-y-0 right-0 flex items-center p-2 hover:opacity-80 focus-visible:outline-offset-2"
+      >
+        <span>{{showPassword ? "🫣" : "👀"}}</span>
+      </button>
+    }
+  </div>
+  
