Agregado de botones directos

--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -39,9 +39,17 @@
                 Regístrate aquí
         </button>
     </div>
-
+    <!-- CAMBIAR POR BUTTON CUSTOM -->
     <button (click)="accessDirect(0)"
             class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
-                Acceso directo
+                Acceso maitre
+    </button>
+    <button (click)="accessDirect(1)"
+            class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
+                Acceso cliente
+    </button>
+    <button (click)="accessDirect(2)"
+            class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
+                Acceso dueño
     </button>
 </main>
