--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,2 +1,50 @@
-<p>home works!</p>
-<button (click)="sessionClose()">Cerrar sesion</button>
+<main class="relative min-h-screen bg-red-100 flex flex-col">
+    <!-- Header -->
+    <header
+        class="flex justify-between items-center px-4 py-3 bg-gradient-to-r from-red-800 to-red-700 text-white shadow-md">
+        <!-- Botón hamburguesa -->
+        <button (click)="toggleMenu()" class="flex flex-col gap-1 focus:outline-none">
+            <span class="block w-6 h-0.5 bg-white"></span>
+            <span class="block w-6 h-0.5 bg-white"></span>
+            <span class="block w-6 h-0.5 bg-white"></span>
+        </button>
+
+        <!-- Logo / título -->
+        <h1 class="text-lg font-bold">Home</h1>
+
+        <!-- Avatar -->
+        <div class="w-10 h-10 rounded-full overflow-hidden border-2 border-white">
+            <img src="https://i.pravatar.cc/100" alt="User" class="w-full h-full object-cover">
+        </div>
+    </header>
+
+    <!-- Menu lateral -->
+    <aside [class.translate-x-0]="menuOpen" [class.-translate-x-full]="!menuOpen"
+        class="fixed top-0 left-0 w-64 h-full bg-white shadow-lg transform transition-transform duration-300 z-50 flex flex-col justify-between">
+        <div>
+            <div class="p-5 bg-red-800 flex flex-col gap-2">
+                <h2 class="text-xl font-semibold text-white text-center uppercase">Menú de opciones</h2>
+                <p class="text-center border border-gray-500 rounded-2xl bg-white p-1">{{userEmail}}</p>
+            </div>
+            <nav class="flex flex-col p-5 space-y-4 text-gray-700">
+                <!-- Cambiar por el boton custom -->
+                <button class="text-center px-3 py-2 rounded hover:bg-red-100 border border-red-500">🍔 Comidas</button>
+                <button class="text-center px-3 py-2 rounded hover:bg-red-100 border border-red-500">🥤 Bebidas</button>
+            </nav>
+        </div>
+        <div class="text-center">
+            <button class="text-center px-3 py-2 text-white font-bold rounded hover:bg-red-100 bg-red-800 mb-10"
+                (click)="sessionClose()">Cerrar sesión</button>
+        </div>
+    </aside>
+
+    <!-- Menu abierto -->
+    @if (menuOpen) {
+    <div (click)="toggleMenu()" class="fixed inset-0 bg-black/40 z-40"></div>
+    }
+
+    <!-- Contenido principal -->
+    <section class="flex-1 flex flex-col justify-center items-center p-6">
+        <p class="text-gray-700">distintos menus...</p>
+    </section>
+</main>
