--- a/src/app/pages/menu/foods/foods.html
+++ b/src/app/pages/menu/foods/foods.html
@@ -47,30 +47,32 @@
     <section class="flex flex-col items-center p-6 gap-3">
         <input class="border border-black p-2 w-full px-5" type="text" placeholder="Buscar comida...">
         <div class="flex gap-2">
-            <button class="border border-red-600 p-2 rounded-full bg-gray-100 text-red-500 font-bold">Todo</button>
-            <button class="border border-red-600 p-2 rounded-full bg-gray-100 text-red-500 font-bold">Ensaladas</button>
-            <button class="border border-red-600 p-2 rounded-full bg-gray-100 text-red-500 font-bold">Pastas</button>
-            <button class="border border-red-600 p-2 rounded-full bg-gray-100 text-red-500 font-bold">Carne</button>
+            <app-custom-button type="primary" label="Todo"></app-custom-button>
+            <app-custom-button type="primary" label="Ensaladas"></app-custom-button>
+            <app-custom-button type="primary" label="Pastas"></app-custom-button>
+            <app-custom-button type="primary" label="Carnes"></app-custom-button>
         </div>
     </section>
     <section class="flex gap-2 text-center flex-wrap">
-        <div class="border border-red-500 bg-white flex flex-col items-center w-50 rounded-2xl p-2">
-            <h4 class="text-2xl font-bold text-black/70">Pizza</h4>
-            <img class="size-25 object-cover rounded-2xl" src="https://www.sortirambnens.com/wp-content/uploads/2019/02/pizza-de-peperoni.jpg" alt="">
-            <p class="text-gray-600">Una masa con tomate y queso</p>
-            <button class="text-white bg-red-700 p-1 rounded-2xl font-bold px-3">Agregar</button>
-        </div>
-        <div class="border border-red-500 bg-white flex flex-col items-center w-50 rounded-2xl p-2">
-            <h4 class="text-2xl font-bold text-black/70">Hamburguesa</h4>
-            <img class="size-25 object-cover rounded-2xl" src="https://img.hogar.mapfre.es/wp-content/uploads/2018/09/hamburguesa-sencilla.jpg" alt="">
-            <p class="text-gray-600">Pan, carne, queso, lechuga, tomate</p>
-            <button class="text-white bg-red-700 p-1 rounded-2xl font-bold px-3">Agregar</button>
-        </div>
-        <div class="border border-red-500 bg-white flex flex-col items-center w-50 rounded-2xl p-2">
-            <h4 class="text-2xl font-bold text-black/70">Papas fritas</h4>
-            <img class="size-25 object-cover rounded-2xl" src="https://cocina-casera.com/wp-content/uploads/2023/01/patatas-fritas-crujientes-francesa-1-770x485.jpg" alt="">
-            <p class="text-gray-600">Papas fritas xd</p>
-            <button class="text-white bg-red-700 p-1 rounded-2xl font-bold px-3">Agregar</button>
-        </div>
+        <app-product-card
+         title="Pizza" 
+         description="Una masa con tomate y queso" 
+         urlImg="https://www.sortirambnens.com/wp-content/uploads/2019/02/pizza-de-peperoni.jpg"
+         ></app-product-card>
+        <app-product-card
+        title="Hamburguesa" 
+        description="Pan, carne, queso, lechuga, tomate" 
+        urlImg="https://img.hogar.mapfre.es/wp-content/uploads/2018/09/hamburguesa-sencilla.jpg"
+        ></app-product-card>
+        <app-product-card 
+        title="Papas fritas" 
+        description="Papas fritas xd" 
+        urlImg="https://cocina-casera.com/wp-content/uploads/2023/01/patatas-fritas-crujientes-francesa-1-770x485.jpg"
+        ></app-product-card>
     </section>
+    <button class="absolute right-5 bottom-3 border border-red-600 bg-white text-red-600 w-fit p-5 rounded-full">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+            <path d="M2.25 2.25a.75.75 0 0 0 0 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 0 0-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 0 0 0-1.5H5.378A2.25 2.25 0 0 1 7.5 15h11.218a.75.75 0 0 0 .674-.421 60.358 60.358 0 0 0 2.96-7.228.75.75 0 0 0-.525-.965A60.864 60.864 0 0 0 5.68 4.509l-.232-.867A1.875 1.875 0 0 0 3.636 2.25H2.25ZM3.75 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM16.5 20.25a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Z" />
+        </svg>
+    </button>
 </main>
