--- a/src/app/pages/menu/foods/foods.html
+++ b/src/app/pages/menu/foods/foods.html
@@ -47,10 +47,10 @@
     <section class="flex flex-col items-center p-6 gap-3">
         <input class="border border-black p-2 w-full px-5" type="text" placeholder="Buscar comida...">
         <div class="flex gap-2">
-            <app-custom-button type="primary" label="Todo"></app-custom-button>
-            <app-custom-button type="primary" label="Ensaladas"></app-custom-button>
-            <app-custom-button type="primary" label="Pastas"></app-custom-button>
-            <app-custom-button type="primary" label="Carnes"></app-custom-button>
+            <app-custom-button type="primary" label="Todo" customStyle="w-fit px-2 py-1"></app-custom-button>
+            <app-custom-button type="primary" label="Ensaladas" customStyle="w-fit px-2 py-1"></app-custom-button>
+            <app-custom-button type="primary" label="Pastas" customStyle="w-fit px-2 py-1"></app-custom-button>
+            <app-custom-button type="primary" label="Carnes" customStyle="w-fit px-2 py-1"></app-custom-button>
         </div>
     </section>
     <section class="flex gap-2 text-center flex-wrap">
