[+] ahora las comidas se muestran en columnas

--- a/src/app/pages/menu/foods/foods.html
+++ b/src/app/pages/menu/foods/foods.html
@@ -53,7 +53,7 @@
             <app-custom-button type="primary" label="Carnes" customStyle="w-fit px-2 py-1"></app-custom-button>
         </div>
     </section>
-    <section class="flex gap-2 text-center flex-wrap">
+    <section class="flex flex-col gap-2 items-center text-center">
         <app-product-card
          title="Pizza" 
          description="Una masa con tomate y queso" 
