--- a/src/app/pages/chef/form-foods/form-foods.html
+++ b/src/app/pages/chef/form-foods/form-foods.html
@@ -8,12 +8,11 @@
         </div>
         <div class="flex justify-center items-center flex-col gap-2">
             <!-- Nombre -->
-            <app-custom-input-chef 
+            <app-custom-input 
                 [controller]="this.dishForm.controls.name" 
                 type="text" 
-                autocomplete="given-name" 
                 placeholder="Nombre del plato">
-            </app-custom-input-chef>
+            </app-custom-input>
             @if (this.dishForm.controls.name.errors && this.dishForm.controls.name.touched) {
                 <div class="text-sm text-red-500">
                         <p>[!] El nombre es requerido</p>
@@ -21,12 +20,11 @@
             }
 
             <!-- Descripcion -->
-            <app-custom-input-chef 
+            <app-custom-input 
                 [controller]="this.dishForm.controls.description" 
                 type="text" 
-                autocomplete="given-name" 
                 placeholder="Descripcion del plato">
-            </app-custom-input-chef>
+            </app-custom-input>
             @if (this.dishForm.controls.description.errors && this.dishForm.controls.description.touched) {
                 <div class="text-sm text-red-500">
                         <p>[!] La descripcion es requerida</p>
@@ -34,12 +32,11 @@
             }
 
             <!-- Tiempo -->
-            <app-custom-input-chef 
+            <app-custom-input 
                 [controller]="this.dishForm.controls.time" 
-                type="number" 
-                autocomplete="given-name" 
+                type="number"  
                 placeholder="Tiempo de elaboracion">
-            </app-custom-input-chef>
+            </app-custom-input>
             @if (this.dishForm.controls.time.errors && this.dishForm.controls.time.touched) {
                 <div class="text-sm text-red-500">
                         <p>[!] El tiempo es requerido</p>
@@ -47,12 +44,11 @@
             }
 
             <!-- Precio -->
-            <app-custom-input-chef 
+            <app-custom-input
                 [controller]="this.dishForm.controls.price" 
                 type="number" 
-                autocomplete="given-name" 
                 placeholder="Precio">
-            </app-custom-input-chef>
+            </app-custom-input>
             @if (this.dishForm.controls.price.errors && this.dishForm.controls.price.touched) {
                 <div class="text-sm text-red-500">
                         <p>[!] El precio es requerido</p>
