Agrande el header

--- a/src/app/pages/menu/drinks/drinks.html
+++ b/src/app/pages/menu/drinks/drinks.html
@@ -1,7 +1,7 @@
 <main class="relative min-h-screen bg-red-100 flex flex-col">
     <!-- Header -->
     <header
-        class="flex justify-center items-center px-3 sm:px-4 py-3 bg-gradient-to-r from-red-800 to-red-700 text-white shadow-md relative">
+        class="flex justify-center items-center px-4 py-5 bg-gradient-to-r from-red-800 to-red-700 text-white shadow-md relative">
         <!-- Botón hamburguesa -->
         <button (click)="toggleMenu()" class="flex flex-col gap-1 focus:outline-none p-1 absolute left-3 sm:left-4">
             <span class="block w-5 h-0.5 sm:w-6 sm:h-0.5 bg-white"></span>
