Feature: Implementé el login anonimo

--- a/src/app/pages/auth/register/register.html
+++ b/src/app/pages/auth/register/register.html
@@ -110,6 +110,11 @@
             class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
                 Iniciar Sesión
         </button>
+
+        <button (click)="navigateToGuest()"
+        class="bg-white text-red-500 rounded-2xl w-80 p-2 mt-2">
+            Registrarse como invitado
+    </button>
     </div>
 
 </main>
